# dobot1-control

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  calibrate-accelerometers.py  changelog.html  contributing.html  genindex.html  index.html  objects.inv  output.json  output.txt  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  test move.ipynb  tox.ini
.github/workflows/: build.yml  ci-cd.yml  coverage.yml  docs.yml  release.yml  tests.yml
_modules/: index.html
_modules/dobot1_control/: DobotBase.html  calibrate_accelerometers.html
_sources/: index.rst.txt
_sources/reference/autosummary/: dobot1_control.DobotBase.DobotBase.rst.txt  dobot1_control.DobotBase.arrayToStr.rst.txt  dobot1_control.DobotBase.rst.txt  dobot1_control.DobotBase.valueToStr.rst.txt  dobot1_control.DobotControl.rst.txt  dobot1_control.DobotDriver.rst.txt  dobot1_control.DobotKinematics.rst.txt  dobot1_control.calibrate_accelerometers.continuous_mode.rst.txt  dobot1_control.calibrate_accelerometers.display_accelerometer_data.rst.txt  dobot1_control.calibrate_accelerometers.main.rst.txt  dobot1_control.calibrate_accelerometers.positions_mode.rst.txt  dobot1_control.calibrate_accelerometers.rst.txt  dobot1_control.calibrate_accelerometers.toEndEffectorHeight.rst.txt  dobot1_control.rst.txt
coverage-report/: cov.json  index.html
coverage-report/20260513_2bc52479e5/: class_index.html  function_index.html  index.html  status.json  z_a44f0ac069e85531_test_kinematics_py.html  z_f040c64d0681c578_DobotBase_py.html  z_f040c64d0681c578_DobotControl_py.html  z_f040c64d0681c578_DobotDriver_py.html  z_f040c64d0681c578_DobotKinematics_py.html  z_f040c64d0681c578___init___py.html  z_f040c64d0681c578_calibrate_accelerometers_py.html
coverage-report/20260513_844d3a882b/: class_index.html  function_index.html  index.html  status.json  z_a44f0ac069e85531_test_kinematics_py.html  z_f040c64d0681c578_DobotBase_py.html  z_f040c64d0681c578_DobotControl_py.html  z_f040c64d0681c578_DobotDriver_py.html  z_f040c64d0681c578_DobotKinematics_py.html  z_f040c64d0681c578___init___py.html  z_f040c64d0681c578_calibrate_accelerometers_py.html
dobot/: DobotBase.py  DobotDriver.py  DobotKinematics.py  DobotSDK.py  __init__.py
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/_templates/: class.rst  module.rst
docs/reference/: index.rst
notebooks/: dobot example moves.ipynb  dobot_example_moves.ipynb
reference/: index.html
reference/autosummary/: dobot1_control.DobotBase.DobotBase.html  dobot1_control.DobotBase.arrayToStr.html  dobot1_control.DobotBase.html  dobot1_control.DobotBase.valueToStr.html  dobot1_control.DobotControl.html  dobot1_control.DobotDriver.html  dobot1_control.DobotKinematics.html  dobot1_control.calibrate_accelerometers.continuous_mode.html  dobot1_control.calibrate_accelerometers.display_accelerometer_data.html  dobot1_control.calibrate_accelerometers.html  dobot1_control.calibrate_accelerometers.main.html  dobot1_control.calibrate_accelerometers.positions_mode.html  dobot1_control.calibrate_accelerometers.toEndEffectorHeight.html  dobot1_control.html
src/dobot1_control/: DobotBase.py  DobotControl.py  DobotDriver.py  DobotKinematics.py  __init__.py  calibrate_accelerometers.py
tests/: test_kinematics.py
